--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<html>
-    <head>
-        <title>Chueasy React Previewer Component Demo</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0,user-scalable=no">
-    </head>
-    <body style="padding: 0px; margin: 0px;">
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-    <script type="text/javascript" src="bundle.js"></script></body>
-</html>
+<html><head><title>Chueasy React Previewer Component Demo</title><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><script defer="defer" src="bundle.js"></script></head><body style="padding: 0px; margin: 0px;"><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
